tests/baselines/reference/objectBindingPatternKeywordIdentifiers04.errors.txt
tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers04.ts(2,16): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers04.ts (1 errors) ====
    
    var { "while": while } = { while: 1 }
                   ~~~~~
!!! error TS1003: Identifier expected.